# proof-of-gameplay

./: .gitignore  README.md  main.py
.dvc/: config
app/: pubspec.yaml
app/HawkEye/HawkEye/: HawkEyeApp.swift  Notifications.swift
app/HawkEye/HawkEye.xcodeproj/: project.pbxproj
app/android/app/: build.gradle
app/flutter/: README.md  pubspec.yaml
app/flutter/test/: widget_test.dart
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart  main_old.dart
app/webrpc-test/client/: client.html  model_server.py  webrtc.js
app/webrpc-test/signaling-server/: package.json
contract/tests/: proof-of-gameplay.ts
docs/: .$architecture.drawio.bkp
games/flappy_bird/: README.md  inputs.txt  main.py  pyproject.toml
logic/: Anchor.toml
logic/programs/proof-of-gameplay/: Cargo.toml
logic/programs/proof-of-gameplay/src/: lib.rs
model/: .gitignore  README.md  pyproject.toml  requirements.txt
model-legacy/src/: finger_key_mapping.py  hand_tracking.py  main.py
model/data/: key_log_game_1.csv  key_log_typing_1.csv  key_logger.py  keys.names  preview_data.py  process_data.py
model/data/processed/: process_data.py  space_index_left_lucas_1_config.yaml  space_index_right_lucas_1_config.yaml  space_mixed_lucas_1_config.yaml  space_mixed_lucas_2_config.yaml  space_thumb_left_lucas_1_config.yaml  space_thumb_right_lucas_1_config.yaml  typing_alphabetic_1_gopi_1_config.yaml  typing_alphabetic_1_lucas_1_config.yaml
model/data/raw/: space_index_left_lucas_1.csv  space_index_left_lucas_1.mp4.dvc  space_index_right_lucas_1.csv  space_index_right_lucas_1.mp4.dvc  space_mixed_lucas_1.csv  space_mixed_lucas_1.mp4.dvc  space_mixed_lucas_2.csv  space_mixed_lucas_2.mp4.dvc  space_thumb_left_lucas_1.csv  space_thumb_left_lucas_1.mp4.dvc  space_thumb_right_lucas_1.csv  space_thumb_right_lucas_1.mp4.dvc  typing_alphabetic_1_1_lucas.csv  typing_alphabetic_1_gopi_1.csv  typing_alphabetic_1_gopi_1.mp4.dvc  typing_alphabetic_1_lucas_1.mp4.dvc
model/data/text-blobs/: keys_1.txt  keys_2.txt  keys_3.txt  keys_4.txt  keys_5.txt  shortcuts_1.txt  shortcuts_2.txt  shortcuts_3.txt  typing_alphabetic_1.txt  typing_alphabetic_2.txt  typing_mixed_1.txt  typing_mixed_2.txt  typing_mixed_3.txt  typing_numeric_1.txt  typing_numeric_2.txt  typing_numeric_3.txt
model/docs/: .$model.drawio.bkp  model.drawio
model/src/: dataset.py  evaluate.py  finger_key_mapping.py  keyboard_tracking.py  main.py  main2.py  main3.py  main4.py  model.py  train_model.py
services/phala/: .envrc  README.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
services/phala/scripts/: publish.ts
services/phala/src/: index.ts
services/phala/tests/: index.test.ts
services/video-server/: README.md  app.py  database.db  debugSimGame.py  matching.py  pyproject.toml  schema.sql  server.py  simGame.py  test.txt  testClient.py  testSign.py
services/video-server/templates/: index.html
services/video-server/testGame/: inputs.txt  main.py
webapp/: package-lock.json  package.json
webapp/app/: WalletConnectionProvider.tsx  globals.css  layout.tsx  page.tsx
(+18 files in other folders)
