[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["Lucas Aschenbach <Lucas.Aschenbach@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0.84"
mediapipe = "^0.10.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
