[project]
authors = [{name = "Lucas Aschenbach", email = "Lucas.Aschenbach@gmail.com"}]
dependencies = ["mediapipe>=0.10.15,<0.11"]
description = "Add a short description here"
name = "model"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
model = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pynput = ">=1.7.7,<2"
numpy = "==1.24.4"
opencv = ">=4.10.0,<5"
pandas = ">=2.2.3,<3"
python-dateutil = ">=2.9.0,<3"
pytorch = ">=2.4.1,<3"
torchvision = ">=0.19.1,<0.20"
scikit-learn = ">=1.5.2,<2"
