[tool.poetry]
name = "video-server"
version = "0.1.0"
description = ""
authors = ["Lucas Aschenbach <Lucas.Aschenbach@gmail.com>"]
readme = "README.md"
packages = [{include = "video_server"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-socketio = "^5.3.7"
eventlet = "^0.37.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
